manifests/ping-pong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong
  labels:
    app: ping-pong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
      - name: ping-pong-container
        image: 1701002/ping-pong:v1.03
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-service
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
